--- a/index.html
+++ b/index.html
@@ -99,6 +99,27 @@
             <div class="display-6">
                 Alunos Cadastrados:
             </div>
+
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Nome</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Telefone</th>
+                                <th scope="col">Curso</th>
+                                <th scope="col">Turno</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
         </section>
     </main>
 
@@ -114,7 +135,7 @@
 
     <script>
         $("#inputTelephone").mask("(99) 99999-9999");
-      </script>
+    </script>
 </body>
 
 </html>
