--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <div class="row">
                 <div class="col-md-10 offset-md-1">
-                    <table class="table">
+                    <table class="table" id="alunosTable">
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -130,6 +130,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/jquery.mask.min.js"></script>
 
