--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </div>
 
                         <div class="row mb-3 mt-3">
-                            <label for="selectTurno" class="col-sm-2 col-form-label">Turno:</label>
+                            <label class="col-sm-2 col-form-label">Turno:</label>
                             <div class="col-sm-4">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="radiosTurno" id="radiosTurno1"
@@ -107,7 +107,7 @@
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col">Nome</th>
-                                <th scope="col">Email</th>
+                                <th scope="col" class="d-none d-md-table-cell">Email</th>
                                 <th scope="col">Telefone</th>
                                 <th scope="col">Curso</th>
                                 <th scope="col">Turno</th>
